# adb-lib

./: .gitignore  CMakeLists.txt  README.md  main.cpp
ObjLibusb/: CMakeLists.txt  README.md
ObjLibusb/include/: ObjLibusb.hpp
ObjLibusb/include/ObjLibusb/: Context.hpp  Descriptors.hpp  Device.hpp  DeviceHandle.hpp  DeviceList.hpp  Error.hpp  ObjLibusb.hpp  Transfer.hpp
ObjLibusb/src/: Context.cpp  Device.cpp  DeviceHandle.cpp  DeviceList.cpp  Error.cpp  Transfer.cpp
cmake/: adblib-config.cmake
include/: APacket.hpp  APayload.hpp  AStream.hpp  AdbBase.hpp  AdbDevice.hpp  AdbStreams.hpp  Features.hpp  Transport.hpp  UsbTransport.hpp  adb.hpp  libadb.hpp  utils.hpp
include/streams/: AdbIStream.hpp  AdbIStreamBase.hpp  AdbOStream.hpp  AdbOStreamBase.hpp  AdbStreamBase.hpp
obj-libusb/: CMakeLists.txt
obj-libusb/include/: Libusb.hpp  LibusbContext.hpp  LibusbDescriptors.hpp  LibusbDevice.hpp  LibusbDeviceHandle.hpp  LibusbDeviceList.hpp  LibusbError.hpp  LibusbTransfer.hpp
obj-libusb/src/: LibusbContext.cpp  LibusbDevice.cpp  LibusbDeviceHandle.cpp  LibusbDeviceList.cpp  LibusbError.cpp  LibusbTransfer.cpp
src/: APacket.cpp  APayload.cpp  AStream.cpp  AdbBase.cpp  AdbDevice.cpp  Features.cpp  Transport.cpp  UsbTransport.cpp  libadb.cpp  main.cpp  test.cpp  test1.cpp  test2.cpp  test_adb_base.cpp  test_adb_device.cpp  utils.cpp
src/streams/: AdbIStream.cpp  AdbIStreamBase.cpp  AdbOStream.cpp  AdbOStreamBase.cpp  AdbStreamBase.cpp
tests/: test_adb_base.cpp  test_adb_device.cpp  test_adb_shell.cpp  test_transport.cpp  test_utils.cpp
